[metadata]
name = pkm
description = CORN
long_description = file: README.md
long_description_content_type = text/markdown
keywords = robotics
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 48
    setuptools_scm >= 6.0
    cmake_build_extension
    pybind11
install_requires =
    numpy
    cho_util >= 0.2.1
    matplotlib
    cmake_build_extension
# FIXME: temporarily disabled due to symlink issues
include_package_data = False

[options.packages.find]
where = src
